--- a/requirements.txt
+++ b/requirements.txt
@@ -3,22 +3,26 @@ beautifulsoup4==4.9.3
 certifi==2021.5.30
 cloudinary==1.25.0
 confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
 Django==3.2.3
 django-bootstrap4==3.0.1
 django-braces==1.14.0
 django-core==1.4.1
 django-cors-headers==3.7.0
+django-heroku==0.3.1
 django-model-utils==4.1.1
 django-registration==3.1.2
 django-star-ratings==0.9.1
 django-tinymce==3.3.0
 djangorestframework==3.12.4
+gunicorn==20.1.0
 importlib-metadata==2.1.1
 install==1.3.4
 jedi==0.18.0
 parso==0.8.2
 Pillow==8.2.0
 pkg-resources==0.0.0
+psycopg2==2.8.6
 python-decouple==3.4
 pytz==2021.1
 simplejson==3.17.2
@@ -28,4 +32,5 @@ sqlparse==0.4.1
 swapper==1.1.2.post1
 typing-extensions==3.10.0.0
 urllib3==1.26.5
+whitenoise==5.2.0
 zipp==3.4.1
