final changes to site

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,15 @@
 {
     "cSpell.words": [
+        "Awwards",
         "Awwardz",
+        "awward",
+        "bckgrnd",
+        "closebtn",
+        "demsh",
         "newproject",
-        "preconnect"
+        "preconnect",
+        "sidenav",
+        "sitkyrqgebrscu",
+        "vvsa"
     ]
 }
